force-app/main/default/objects/Client_Tag__c/Client_Tag__c.object-meta.xml
<CustomObject>
    <description>Used to tag Clients with one or more tags used for Billing and/or Reporting.</description>
    <label>LV Client Tag</label>
    <nameField>
        <label>Client Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Client Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>