force-app/main/default/objects/Client_Tag__c/fields/Client_Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Tag_Name__c</fullName>
    <label>Client Tag Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>