force-app/main/default/objects/Client_Tag__c/fields/UsedforBilling__c.field-meta.xml
<CustomField>
    <fullName>UsedforBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used for Billing</label>
    <type>Checkbox</type>
</CustomField>