force-app/main/default/objects/Client_Tag__c/fields/UsedforReporting__c.field-meta.xml
<CustomField>
    <fullName>UsedforReporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used for Reporting</label>
    <type>Checkbox</type>
</CustomField>