force-app/main/default/objects/Client_Tag__c/listViews/Client_Tags.listView-meta.xml
<ListView>
    <fullName>Client_Tags</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>UsedforBilling__c</columns>
    <columns>UsedforReporting__c</columns>
    <filterScope>Everything</filterScope>
    <label>Client Tags</label>
</ListView>